Changes to all pages and navigation done

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -139,7 +139,7 @@
           </a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link  " href="../Login.html">
+          <a class="nav-link  " href="../home.html">
             <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <svg width="12px" height="12px" viewBox="0 0 40 44" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <title>document</title>
@@ -155,7 +155,7 @@
                 </g>
               </svg>
             </div>
-            <span class="nav-link-text ms-1"> Login</span>
+            <span class="nav-link-text ms-1"> Logout</span>
           </a>
         </li>
         <li class="nav-item">
@@ -182,6 +182,7 @@
         </li>
       </ul>
     </div>
+    
     <!-- <div class="sidenav-footer mx-3 mt-3 pt-3">
       <div class="card card-background shadow-none card-background-mask-secondary" id="sidenavCard">
         <div class="full-background" style="background-image: url('../assets/img/curved-images/white-curved.jpeg')"></div>
@@ -315,11 +316,23 @@
       </div>
     </nav>
     <!-- End Navbar -->
-    <div class='tableauPlaceholder' style='width: 1610px; height: 928px;'>
+    <!-- <div class='tableauPlaceholder' style='width: 1610px; height: 928px;'>
       <object class='tableauViz' width='1610' height='928' style='display:none;'>
         <param name='host_url' value='https%3A%2F%2Fprod-apnortheast-a.online.tableau.com%2F' />
         <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;backofficeoperations' />
         <param name='name' value='ProjectDashboard&#47;ProjectDBoard&#47;nasheenmohammed15@gmail.com&#47;ca354431-30e4-419c-a93e-22f3403b206d' />
+        <param name='tabs' value='yes' />
+        <param name='toolbar' value='yes' />
+        <param name='showAppBanner' value='false' />
+      </object>
+    </div> -->
+
+    <div class='tableauPlaceholder' style='width: 1610px; height: 928px;'>
+      <object class='tableauViz' width='1610' height='928' style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fprod-apnortheast-a.online.tableau.com%2F' /> 
+        <param name='embed_code_version' value='3' /> 
+        <param name='site_root' value='&#47;t&#47;backofficeops' />
+        <param name='name' value='ProjectDashboardBackOffice&#47;ProjectDBoard' />
         <param name='tabs' value='yes' />
         <param name='toolbar' value='yes' />
         <param name='showAppBanner' value='false' />
@@ -1148,6 +1161,7 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="../assets/js/soft-ui-dashboard.min.js?v=1.0.2"></script>
+  <!-- <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'></script> -->
   <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'></script>
 </body>
 
