--- a/public/Designup.html
+++ b/public/Designup.html
@@ -25,7 +25,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-none my-3  navbar-transparent mt-4">
     <div class="container">
-      <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 text-white" href="/dashboard.html">
+      <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 text-white" href="#">
         Beach T Shirt
       </a>
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,9 +38,9 @@
       <div class="collapse navbar-collapse" id="navigation">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item">
-            <a class="nav-link d-flex align-items-center me-2 active" aria-current="page" href="dashboard.html">
+            <a class="nav-link d-flex align-items-center me-2 active" aria-current="page" href="home.html">
               <i class="fa fa-chart-pie opacity-6  me-1"></i>
-              Dashboard
+              Homepage
             </a>
           </li>
           <!-- <li class="nav-item">
@@ -49,14 +49,14 @@
               Profile
             </a>
           </li> -->
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link me-2" href="Signup.html">
               <i class="fas fa-user-circle opacity-6  me-1"></i>
               Sign Up
             </a>
-          </li>
+          </li> -->
           <li class="nav-item">
-            <a class="nav-link me-2" href="Login.html">
+            <a class="nav-link me-2" href="Deslogin.html">
               <i class="fas fa-key opacity-6  me-1"></i>
               Sign In
             </a>
@@ -67,12 +67,12 @@
   </nav>
   <!-- End Navbar -->
   <section class="h-100-vh mb-8">
-    <div class="page-header align-items-start section-height-50 pt-5 pb-11 m-3 border-radius-lg" style="background-image: url('../assets/img/curved-images/curved14.jpg');">
+    <div class="page-header align-items-start section-height-50 pt-5 pb-11 m-3 border-radius-lg" style="background-image: url('../assets/img/curved-images/DesignSignup.jpeg');">
       <span class="mask bg-gradient-dark opacity-6"></span>
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-5 text-center mx-auto">
-            <h1 class="text-white mb-2 mt-5">Welcome!</h1>
+            <h1 class="text-white mb-2 mt-5">Welcome Designer!</h1>
             <p class="text-lead text-white">Use these form to login or create a new account</p>
           </div>
         </div>
@@ -105,7 +105,7 @@
                 <div class="text-center">
                   <button type="submit" value="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Sign up</button>
                 </div>
-                <p class="text-sm mt-3 mb-0">Already have an account? <a href="Login.html" class="text-dark font-weight-bolder">Sign in</a></p>
+                <p class="text-sm mt-3 mb-0">Already have an account? <a href="Deslogin.html" class="text-dark font-weight-bolder">Sign in</a></p>
               </form>
             </div>
           </div>
