--- a/public/Deslogin.html
+++ b/public/Deslogin.html
@@ -28,8 +28,8 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg  blur blur-rounded top-0  z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
           <div class="container-fluid">
-            <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="../pages/dashboard.html">
-              Back Office Operations
+            <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="#">
+              Beach T-Shirts
             </a>
             <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon mt-2">
@@ -42,9 +42,9 @@
               <ul class="navbar-nav mx-auto">
 
                 <li class="nav-item">
-                  <a class="nav-link me-2" href="../pages/sign-up.html">
+                  <a class="nav-link me-2" href="home.html">
                     <i class="fas fa-user-circle opacity-6 text-dark me-1"></i>
-                    Sign Up
+                    Homepage
                   </a>
                 </li>
               </ul>
@@ -62,7 +62,7 @@
           <div class="col-xl-4 col-lg-5 col-md-6 d-flex flex-column mx-auto">
             <div class="card card-plain mt-8">
               <div class="card-header pb-0 text-left bg-transparent">
-                <h3 class="font-weight-bolder text-info text-gradient">Welcome back</h3>
+                <h3 class="font-weight-bolder text-info text-gradient">Welcome back Designer</h3>
                 <p class="mb-0">Enter your email and password to sign in</p>
               </div>
               <div class="card-body">
@@ -75,10 +75,10 @@
                   <div class="mb-3">
                     <input type="password" class="form-control" placeholder="Password" name="password" aria-label="Password" aria-describedby="password-addon">
                   </div>
-                  <div class="form-check form-switch">
+                  <!-- <div class="form-check form-switch">
                     <input class="form-check-input" type="checkbox" id="rememberMe" checked="">
                     <label class="form-check-label" for="rememberMe">Remember me</label>
-                  </div>
+                  </div> -->
                   <div class="text-center">
                     <button type="submit" value="submit" class="btn bg-gradient-info w-100 mt-4 mb-0">Sign in</button>
                   </div>
@@ -87,14 +87,14 @@
               <div class="card-footer text-center pt-0 px-lg-2 px-1">
                 <p class="mb-4 text-sm mx-auto">
                   Don't have an account?
-                  <a href="sign-up.html" class="text-info text-gradient font-weight-bold">Sign up</a>
+                  <a href="Designup.html" class="text-info text-gradient font-weight-bold">Sign up</a>
                 </p>
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="oblique position-absolute top-0 h-100 d-md-block d-none me-n8">
-              <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6" style="background-image:url('../assets/img/curved-images/curved6.jpg')"></div>
+              <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6" style="background-image:url('../assets/img/curved-images/DesignLogin.jpeg')"></div>
             </div>
           </div>
         </div>
