--- a/public/Login.html
+++ b/public/Login.html
@@ -28,7 +28,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg  blur blur-rounded top-0  z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
           <div class="container-fluid">
-            <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="../pages/dashboard.html">
+            <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="#">
               Back Office Operations
             </a>
             <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,9 +42,9 @@
               <ul class="navbar-nav mx-auto">
 
                 <li class="nav-item">
-                  <a class="nav-link me-2" href="../pages/sign-up.html">
+                  <a class="nav-link me-2" href="home.html">
                     <i class="fas fa-user-circle opacity-6 text-dark me-1"></i>
-                    Sign Up
+                    Homepage
                   </a>
                 </li>
               </ul>
@@ -75,10 +75,10 @@
                   <div class="mb-3">
                     <input type="password" class="form-control" placeholder="Password" name="password" aria-label="Password" aria-describedby="password-addon">
                   </div>
-                  <div class="form-check form-switch">
+                  <!-- <div class="form-check form-switch">
                     <input class="form-check-input" type="checkbox" id="rememberMe" checked="">
                     <label class="form-check-label" for="rememberMe">Remember me</label>
-                  </div>
+                  </div> -->
                   <div class="text-center">
                     <button type="submit" value="submit" class="btn bg-gradient-info w-100 mt-4 mb-0">Sign in</button>
                   </div>
@@ -87,7 +87,7 @@
               <div class="card-footer text-center pt-0 px-lg-2 px-1">
                 <p class="mb-4 text-sm mx-auto">
                   Don't have an account?
-                  <a href="sign-up.html" class="text-info text-gradient font-weight-bold">Sign up</a>
+                  <a href="Signup.html" class="text-info text-gradient font-weight-bold">Sign up</a>
                 </p>
               </div>
             </div>
