--- a/public/Signup.html
+++ b/public/Signup.html
@@ -25,7 +25,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-none my-3  navbar-transparent mt-4">
     <div class="container">
-      <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 text-white" href="/dashboard.html">
+      <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 text-white" href="#">
         Beach T Shirt
       </a>
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,12 +37,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navigation">
         <ul class="navbar-nav mx-auto">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link d-flex align-items-center me-2 active" aria-current="page" href="dashboard.html">
               <i class="fa fa-chart-pie opacity-6  me-1"></i>
               Dashboard
             </a>
-          </li>
+          </li> -->
           <!-- <li class="nav-item">
             <a class="nav-link me-2" href="../pages/profile.html">
               <i class="fa fa-user opacity-6  me-1"></i>
@@ -50,9 +50,9 @@
             </a>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link me-2" href="Signup.html">
+            <a class="nav-link me-2" href="home.html">
               <i class="fas fa-user-circle opacity-6  me-1"></i>
-              Sign Up
+              Homepage
             </a>
           </li>
           <li class="nav-item">
