--- a/public/home.html
+++ b/public/home.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,400i,500,700|Titillium+Web:600" rel="stylesheet">
-    <link rel="stylesheet" href="dist/css/style.css">
+    <!-- <link rel="stylesheet" href="dist/css/style.css"> -->
+    <link rel="stylesheet" href="/public/dist/css/style.css">
+
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
 <body class="is-boxed">
@@ -461,6 +463,7 @@
         </footer>
     </div>
 
-    <script src="dist/js/main.min.js"></script>
+    <!-- <script src="dist/js/main.min.js"></script> -->
+	<script src="/public/dist/js/main.min.js"></script>
 </body>
 </html>
