changed the src and dist

--- a/public/home.html
+++ b/public/home.html
@@ -7,7 +7,7 @@
     <title>Home</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,400i,500,700|Titillium+Web:600" rel="stylesheet">
     <!-- <link rel="stylesheet" href="dist/css/style.css"> -->
-    <link rel="stylesheet" href="/public/dist/css/style.css">
+    <link rel="stylesheet" href="Dist/css/style.css">
 
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
@@ -464,6 +464,6 @@
     </div>
 
     <!-- <script src="dist/js/main.min.js"></script> -->
-	<script src="/public/dist/js/main.min.js"></script>
+	<script src="Dist/js/main.min.js"></script>
 </body>
 </html>
