Home page changes

--- a/public/home.html
+++ b/public/home.html
@@ -57,13 +57,13 @@
 	                        <p class="hero-paragraph is-revealing">Be more fashionable with us.<br>Merging style with elegance.<br>Classic Beach T-shirts loved by all.</p>
 							<div class="hero-form field field-grouped is-revealing">
 	                            <div class="control">
-	                                <a class="button button-primary button-block" href="#">Executive Dashboard</a>
+	                                <a class="button button-primary button-block" href="Signup.html">Executive Dashboard</a>
 	                            </div>
 								<div class="control">
-	                                <a class="button button-primary button-block" href="#">Designer Page</a>
+	                                <a class="button button-primary button-block" href="Designup.html">Designer Page</a>
 	                            </div>
 	                            <div class="control">
-	                                <a class="button button-primary button-block" href="#">Logistics Page</a>
+	                                <a class="button button-primary button-block" href="Logup.html">Logistics Page</a>
 	                            </div>
 	                        </div>
 						</div>
